linux/iptables.txt
 IPTables Configuration

If you set TCP port in aMule to XX and UDP port to YY then you have to set your firewall like this:

iptables -A INPUT -p tcp --dport XX -j ACCEPT
iptables -A INPUT -p udp --dport XX+3 -j ACCEPT
iptables -A INPUT -p udp --dport YY -j ACCEPT

iptables -A INPUT -p tcp --dport XX -j ACCEPT
iptables -A INPUT -p tcp --dport 6667 -j ACCEPT
iptables -A INPUT -p tcp --dport 6685 -j ACCEPT
iptables -A INPUT -p udp --dport 4672 -j ACCEPT

If you are building your iptables-rules from scratch, you also need to allow ESTABLISHED and RELATED traffic to come through your firewall:

iptables -A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

And you must enable traffic to leave your machine aswell, by either allowing all outgoing traffic:

iptables -P OUTPUT ACCEPT

or specifying special rules. 

# STRICT IPTABLES RULES

# vi /etc/network/interfaces

gateway 192.168.1.1
pre-up iptables-restore < /etc/default/ipconfig


# vi /etc/default/ipconfig
# Generated by iptables-save v1.4.4 on Wed Oct 27 09:29:14 2010
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 202.78.203.18/32 -p tcp -m tcp --sport 513:65535 --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT  
-A INPUT -d 202.78.203.18/32 -p tcp -m tcp --sport 513:65535 --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -d 202.78.203.18/32 -p tcp -m tcp --sport 513:65535 --dport 5432 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -d 202.78.203.19/32 -p tcp -m tcp --sport 513:65535 --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -d 202.78.203.19/32 -p tcp -m tcp --sport 513:65535 --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT  
-A INPUT -d 202.78.203.19/32 -p tcp -m tcp --sport 513:65535 --dport 5432 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT                                    
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT                                    
-A INPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A INPUT -j DROP                                                               
-A OUTPUT -o lo -j ACCEPT            
-A OUTPUT -s 202.78.203.18/32 -p tcp -m tcp --sport 22 --dport 513:65535 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -s 202.78.203.18/32 -p tcp -m tcp --sport 80 --dport 513:65535 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -s 202.78.203.18/32 -p tcp -m tcp --sport 5432 --dport 513:65535 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -s 202.78.203.19/32 -p tcp -m tcp --sport 22 --dport 513:65535 -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -s 202.78.203.19/32 -p tcp -m tcp --sport 80 --dport 513:65535 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -s 202.78.203.19/32 -p tcp -m tcp --sport 5432 --dport 513:65535 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT                                   
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT                                   
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A OUTPUT -j DROP                                                              
COMMIT
